added mediocre styling

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -18,3 +18,10 @@
 <br />
 
 <%= link_to 'New category', new_category_path %>
+<br />
+<br />
+<b><u>Data Navigation</u></b>
+<br />
+<%= link_to 'Products', products_path %>
+<br />
+<%= link_to 'Product-Categories', product_categories_path %>
