--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -22,3 +22,10 @@
 <br />
 
 <%= link_to 'New product', new_product_path %>
+<br />
+<br />
+<b><u>Data Navigation</u></b>
+<br />
+<%= link_to 'Product-Categories', product_categories_path %>
+<br />
+<%= link_to 'Categories', categories_path %>
