--- a/app/views/product_categories/index.html.erb
+++ b/app/views/product_categories/index.html.erb
@@ -2,17 +2,13 @@
 
 <table border="1" cellspacing="3" cellpadding="3">
   <tr>
-    <th>Product_ID</th>
 	<th>Product Name</th>
-    <th>Category_ID</th>
 	<th>Category Name</th>
   </tr>
 
 <% @product_categories.each do |product_category| %>
   <tr>
-    <td><%=h product_category.product_id %></td>
 	<td><%= product_category.product.name if product_category.product %></td>
-    <td><%=h product_category.category_id %></td>
 	<td><%= product_category.category.name if product_category.category %></td>
     <td><%= link_to 'Show', product_category %></td>
     <td><%= link_to 'Edit', edit_product_category_path(product_category) %></td>
@@ -24,3 +20,10 @@
 <br />
 
 <%= link_to 'New product_category', new_product_category_path %>
+<br />
+<br />
+<b><u>Data Navigation</u></b>
+<br />
+<%= link_to 'Products', products_path %>
+<br />
+<%= link_to 'Categories', categories_path %>
